      hero sprite", etc) [Ralph]
    * Commands to check whether or not each of the suspend states is
      active, for example: "player is suspended", "npc walls are
      suspended", etc... [James]
    * NPC pathfinding commands: "pathfind npc to" "npc chases npc"
      "cancel npc walk" [James]
    * "get screen width" and "get screen height" [James]
    * Changes to the language:
      * -= and += now return their result, like := does, so they can be
        used as expressions [Ralph]
      * subscript variables and arguments can now have the same name as
        variables in the parent script, "shadowing" them [Ralph]
      * Hexidecimal, octal and binary number constants, written like
        0xCABBA9E, 0o377 and 0b1101111000011 [Ralph]
    * Added "allow switching" argument to "equip menu" command [Ralph]

  * Changes
    * Sound effects used to play at max volume, which has now changed
      to a default of 80% (because music defaulted to just 50%). In
      newly created games the defaults are both 75%. [Ralph]
    * When importing a BMP, unless the palette is identical, color 0
      won't be used unless you explicitly pick it [Ralph]
    * Can input ID of unnamed lookup codes in slice editor [Ralph]
    * HSpeak now disallows most stray commas [Ralph]
    * Scripts triggered from a menu item now always get passed the menu
      item extra data, even if the first argument is the menu item
      handle [Ralph]
    * Custom's splash screen [Ralph]
    * Rearranged and renamed Custom's main menu items a bit; Edit Font is
      now under Edit Graphics [Ralph]

  * Bugfixes
    * 64-bit builds of Custom work now... for real this time! They
      would crash in several menus. 64 bit Linux builds now available.
      [James, Ralph, Matthias]
    * In old games, attacks with enemy type-killer bits wrongly counted
      as elemental for the purpose of spawning. This fix is only
      applied if the game has not been edited since Ypsiliform. [James]