@@ -3715,13 +3715,16 @@ end</example>
 					a <ref>wait</ref> command, because the mouse state is only updated one per frame.
 				</note>
 			</description>
+			<seealso>
+				<ref>mouseclick</ref>
+				<ref>mouserelease</ref>
+			</seealso>
 		</command>
 		<command id="mouseclick">
 			<canon>mouse click (which)</canon>
 			<shortname>mouse click</shortname>
 			<description>
 				Returns <ref>true</ref> if the specified mouse button has been 'clicked' down in the last tick.
-				Returns true even if the mouse button is still down.
 				You can use the constants <ref>leftbutton</ref> and <ref>rightbutton</ref> to specify the button.
 				<note>
 					Just like keyboard commands such as <ref>keyispressed</ref>, you can <b>not</b>
@@ -3729,6 +3732,27 @@ end</example>
 					a <ref>wait</ref> command, because the mouse state is only updated one per frame.
 				</note>
 			</description>
+			<seealso>
+				<ref>mousebutton</ref>
+				<ref>mouserelease</ref>
+			</seealso>
+		</command>
+		<command id="mouserelease">
+			<canon>mouse release (which)</canon>
+			<shortname>mouse release</shortname>
+			<description>
+				Returns <ref>true</ref> if the specified mouse button has been released since the last tick.
+				You can use the constants <ref>leftbutton</ref> and <ref>rightbutton</ref> to specify the button.
+				<note>
+					Just like keyboard commands such as <ref>keyispressed</ref>, you can <b>not</b>
+					wait for the player to click the mouse with a while loop that doesn't contain
+					a <ref>wait</ref> command, because the mouse state is only updated one per frame.
+				</note>
+			</description>
+			<seealso>
+				<ref>mousebutton</ref>
+				<ref>mouseclick</ref>
+			</seealso>
 		</command>
 		<command id="putmouse">
 			<canon>put mouse (X, Y)</canon>
