@@ -667,6 +667,7 @@ define function, begin
 643,getscreenwidth,0          # return the x resolution of the screen
 644,getscreenheight,0         # return the y resolution of the screen
 645,setscreenresolution,2,0,0 # change the x,y resolution of the screen
+646,mouserelease,1,0          # returns true if the specified button is was just released (button)
 # Don't forget to update maxScriptCmdID in const.bi when adding new commands
 end
 
